# qconcious

./: .gitignore  .gitpod.yml  CMakeLists.txt  README  README.md  abstractgame.cpp  abstractgame.h  agentstrategy.cpp  agentstrategy.h  benfordtest.cpp  benfordtest.h  cheater.cpp  cheater.h  cheaterstrategy.cpp  cheaterstrategy.h  classes.qmodel  cooperator.cpp  cooperator.h  cooperatorstrategy.cpp  cooperatorstrategy.h  forgivingstrategy.cpp  forgivingstrategy.h  gameagent.cpp  gameagent.h  gameimpl.cpp  gameimpl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  randomagent.cpp  randomagent.h  randomstrategy.cpp  randomstrategy.h  states.scxml  strategies.h  strategygameagent.cpp  strategygameagent.h  testobj.cpp  testobj.h  (+3 more)
.github/workflows/: c-cpp.yml
utils/: benfordslaw.cpp  benfordslaw.h  fibonacci.cpp  fibonacci.h  webimagewidget.cpp  webimagewidget.h
